--- a/titanic_app.ipynb
+++ b/titanic_app.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "{'estimators': 1, 'learning_rate': 10.0, 'score': 0.82691873463000221}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,6 @@
     "        highest['score'] = score\n",
     "        \n",
     "    a.append(score)\n",
-    "    \n",
     "highest"
    ]
   },
@@ -673,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -694,13 +693,16 @@
        "418"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions = random_search.predict(test)\n",
+    "gr = GradientBoostingClassifier(n_estimators=1, learning_rate=10)\n",
+    "gr.fit(X_train_sc, y_train)\n",
+    "\n",
+    "predictions = gr.predict(test)\n",
     "\n",
     "\n",
     "output = pd.DataFrame({ 'PassengerId' : ids, 'Survived': predictions })\n",
